[준호]git ignore 수정 테스트

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 .DS_Store
+frontend/src/Login/client_secret_104142738903-4orpcns44v4l1thaifumb9af85t90f7m.apps.googleusercontent.com.json
+openvidu-tutorials/
