--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'io.openvidu:openvidu-parent:2.0.0'
 	implementation 'io.openvidu:openvidu-java-client:2.25.0'
 
+
 //	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -60,6 +61,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.7.7'
 	implementation 'org.webjars:sockjs-client:1.5.1'
 	implementation 'org.webjars:stomp-websocket:2.3.3'
+	implementation 'org.springframework.boot:spring-boot-configuration-processor:2.7.7'
 
 }
 
