[준호]openvidu_url 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # OPENVIDU INFO
-OPENVIDU_URL: 3.36.86.205
+# OPENVIDU_URL: 3.36.86.205
+OPENVIDU_URL: https://boonthe.shop/
 OPENVIDU_SECRET: MY_SECRET
 
 
