server port, ssl enabled add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # OPENVIDU INFO
 # OPENVIDU_URL: 3.36.86.205
+server.port: 5000
+server.ssl.enabled: false
 OPENVIDU_URL: https://boonthe.shop/
 OPENVIDU_SECRET: MY_SECRET
 
