--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,16 @@ server.ssl.enabled: false
 OPENVIDU_URL: https://boonthe.shop/
 OPENVIDU_SECRET: MY_SECRET
 
+# ssl info
+# ? ??? ??
+server.ssl.key-store=~/Desktop/java-study/17-cho/src/resources/keystore.p12
+# ? ???
+server.ssl.key-store-password=sam1357!@#
+# alias? ?? ??
+server.ssl.key-password=sam1357!@#
+server.ssl.key-alias=daeell
+
+
 
 spring.jpa.show_sql=true
 
@@ -35,3 +45,4 @@ spring.session.jdbc.initialize-schema=always
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
